--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
     <h3>Sign Up</h3>
     <form>
-    <div class="flex-containter" >
+    <div class="flex-container" >
         <input class="item" type="text" placeholder="First Name">
         <input class="item" type="text" placeholder="Last Name">
     </div>
