made disclaimer smaller font

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         background-color: green;
         color: white;
     }
+    #disclaimer {
+        font-size: smaller;
+    }
     .flex-container {
         display: flex;
         flex: 1;
@@ -71,7 +74,7 @@
     <div class="flex-container">
         <input type="checkbox">
         <label><b>I Agree</b></label>
-        <div>By clicking <span id="regspan">Register</span>, you agree to the <a href="#">Terms and Conditions</a> set out by this site, including our Cookie Use.</div>
+        <div id="disclaimer">By clicking <span id="regspan">Register</span>, you agree to the <a href="#">Terms and Conditions</a> set out by this site, including our Cookie Use.</div>
     </div>
     <div class="flex-container">
         <button class="item" id="register">Register</button>
