tweaked a couple things to make it better for mobile viewport

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
       outline: none;
       border: 1px solid #dddddd;
     }
+    label {
+      white-space: nowrap;
+    }
     #outercontainer {
-      margin: 5rem;
+      margin: 2rem;
+      width: 90%;
     }
     #regspan {
       background-color: blue;
@@ -58,12 +62,14 @@
       flex-grow: 1;
       padding-left: 8 rem;
       padding-right: 8 rem;
+      flex-shrink: 1;
     }
   </style>
   <body>
-    <div id="outercontainer">
-      <h3>Sign Up</h3>
+    <div class="flex-container" id="outercontainer">
+      
       <form>
+        <h3>Sign Up</h3>
         <div class="flex-container">
           <input class="item" type="text" placeholder="First Name" />
           <input class="item" type="text" placeholder="Last Name" />
