put strong around Register

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     #regspan {
       background-color: blue;
       color: white;
+      font-size: small;
+      padding: x-small;
     }
     #register {
       background-color: blue;
@@ -84,14 +86,14 @@
           <input class="item" type="text" placeholder="Password" />
           <input class="item" type="text" placeholder="Confirm Password" />
         </div>
-        <div class="flex-container">
+        <div >
           <div class="item">
             <input type="checkbox" />
             <label><b>I Agree</b></label>
           </div>
           <div class="item">
             <div id="disclaimer">
-              By clicking <span id="regspan">Register</span>, you agree to the
+              By clicking <span id="regspan"><strong>Register</strong></span>, you agree to the
               <a href="#">Terms and Conditions</a> set out by this site,
               including our Cookie Use.
             </div>
